--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "vite": "^5.2.11"
+    },
+    "dependencies": {
+        "ngrok": "^5.0.0-beta.2"
     }
 }
